# PIILeakTest

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  docker.yml  main.yml  publish.yml
examples/: run_demo.sh  suite.yaml
piileaktest/: __init__.py  cli.py  config.py  models.py
piileaktest/assertions/: __init__.py  allowed_pii_assertion.py  leakage_path_assertion.py  masking_assertion.py  no_pii_assertion.py
piileaktest/detectors/: __init__.py  column_heuristics.py  entropy.py  luhn.py  value_patterns.py
piileaktest/lineage/: __init__.py  flow_loader.py  graph_trace.py
piileaktest/reporting/: __init__.py  html_reporter.py  json_reporter.py
piileaktest/utils/: __init__.py  logging.py  redaction.py  sampling.py
sample_data/: 01_source_customers.csv  02_staging_customers.csv  03_dw_customer_dim.csv  04_analytics_customer_kpis.csv  05_public_export.csv
tests/: test_cli_smoke.py  test_entropy.py  test_leakage_path_assertion.py  test_luhn.py  test_masking_assertion.py  test_no_pii_assertion.py  test_value_patterns.py
